Optimization and bug fixes
Finally made a game manager class and cleaned up the enemy creation code.

Fixed bug where reloading the level will cause a null reference exception. 

Smth I forgor?

--- a/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine.csproj
@@ -42,6 +42,7 @@
     <Compile Include="GXPEngine\BombEnemy.cs" />
     <Compile Include="GXPEngine\Bullet.cs" />
     <Compile Include="GXPEngine\Enemy.cs" />
+    <Compile Include="GXPEngine\GameManager.cs" />
     <Compile Include="GXPEngine\GhostEnemy.cs" />
     <Compile Include="GXPEngine\HUD.cs" />
     <Compile Include="GXPEngine\Player.cs" />
