Enemy behavior change
Minor optimizations

Added a shielding enemy

Added knockback when the enemies get hit with a bullet

Code cleanup and organization

Some stuff I forgor about

--- a/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine.csproj
@@ -39,17 +39,18 @@
     <Compile Include="GXPEngine\AddOns\Gizmos.cs" />
     <Compile Include="GXPEngine\AddOns\SpriteBatch.cs" />
     <Compile Include="GXPEngine\AddOns\TiledLoader.cs" />
-    <Compile Include="GXPEngine\BombEnemy.cs" />
-    <Compile Include="GXPEngine\Bullet.cs" />
-    <Compile Include="GXPEngine\Enemy.cs" />
-    <Compile Include="GXPEngine\GameManager.cs" />
-    <Compile Include="GXPEngine\GhostEnemy.cs" />
-    <Compile Include="GXPEngine\HUD.cs" />
-    <Compile Include="GXPEngine\Player.cs" />
-    <Compile Include="GXPEngine\SnakeEnemy.cs" />
-    <Compile Include="GXPEngine\Tiles.cs" />
-    <Compile Include="GXPEngine\Level.cs" />
-    <Compile Include="MyGame.cs" />
+    <Compile Include="Enemies\BombEnemy.cs" />
+    <Compile Include="PlayerStuff\Bullet.cs" />
+    <Compile Include="Enemies\Enemy.cs" />
+    <Compile Include="LevelStuff\GameManager.cs" />
+    <Compile Include="Enemies\GhostEnemy.cs" />
+    <Compile Include="LevelStuff\HUD.cs" />
+    <Compile Include="PlayerStuff\Player.cs" />
+    <Compile Include="Enemies\ShieldEnemy.cs" />
+    <Compile Include="Enemies\SnakeEnemy.cs" />
+    <Compile Include="LevelStuff\Tiles.cs" />
+    <Compile Include="LevelStuff\Level.cs" />
+    <Compile Include="LevelStuff\MyGame.cs" />
     <Compile Include="GXPEngine\Core\Canvas.cs" />
     <Compile Include="GXPEngine\Game.cs" />
     <Compile Include="GXPEngine\GameObject.cs" />
