Reworks and powerUps
Changed a bit of the enemy behavior to fix bugs

Added a CD on the player switching rails

Reworked the player to use a state machine

Added flashing to the enemies when they take damage

Added the power up structure and the rapid fire power up

Probably some other stuff

--- a/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine.csproj
@@ -88,5 +88,7 @@
     <Compile Include="GXPEngine\FMOD\FMODSoundSystem.cs" />
     <Compile Include="GXPEngine\SoLoud\Soloud.cs" />
     <Compile Include="GXPEngine\SoLoud\SoloudSoundSystem.cs" />
+    <Compile Include="PowerUps\Powerup.cs" />
+    <Compile Include="PowerUps\RapidFire.cs" />
   </ItemGroup>
 </Project>
